# microwebcamd

./: CMakeLists.txt
include/: event_loop.h  frame.h  frame_request.h  jpeg.h  list.h  object.h  v4l2_device.h
src/: event_loop.c  frame_request.c  jpeg.c  list.c  main.c  v4l2_device.c
test/: list.c
